se actualiza page lectura-medidor-3

--- a/app/lectura-medidor-3.html
+++ b/app/lectura-medidor-3.html
@@ -513,11 +513,50 @@
                     </li>
                   </ul>
               </div>
-              <div class="d-flex row-title-explain">
+              <div class="row-title-explain">
                 <div class="second-title">Fecha de próxima flectura:</div>
                 <span class="text-sm">05/05/2021</span>
               </div>
               <a href="" class="link-celeste mt-3 d-block">Seguir trayectoria</a>
+
+              <div class="box-lectura">
+                <div class="row-title pl-2">
+                  <div class="second-title">Ingresa tus datos de lectura</div>
+                  <img class="ml-3" src="images/icon-exclamacion.svg" alt="">
+                </div>
+                <div class="alert alert-lectura mt-2">
+                  Te damos la opción de que puedas informarnos la lectura de tu medidor. Para que sea incluida en la siguiente facturación.
+                </div>
+              </div>
+              <form action="" class="form-lectura">
+                  <div class="form-group">
+                    <select class="form-control form-control-lg">
+                      <option>Fecha de lectura</option>
+                      <option>02/05/2021</option>
+                      <option>02/05/2021</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos">
+                  </div>
+                  <div class="box-input-upload">
+                    <div class="custom-file">
+                      <input type="file" id="customFile" class="custom-file-input" style="z-index: -5;">
+                      <label class="custom-file-label" for="customFile" data-browse="Browse">  <span>  Ir a la camara o<span>Cargar fotografía</span></span> </label>
+                    </div>
+                    <ul class="lista-terminos">
+                      <li>
+                        Tamaño máximo permitido: 10Mb
+                      </li>
+                      <li>
+                        Formatos permitidos: JPG, JPEG, PNG, PDF
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="box-button mt-2">
+                    <a href="" class="btn btn-block btn-block btn-lg btn-verde"> Buscar </a>
+                  </div>
+              </form>
 
             </div>
           </div>
