--- a/app/lectura-medidor-4.html
+++ b/app/lectura-medidor-4.html
@@ -524,20 +524,10 @@
                   <div class="second-title px-3">Ingresa tus datos de lectura</div>
                   <img class="ml-2" src="images/icon-exclamacion.svg" alt="">
                 </div>
-                <div class="alert alert-lectura mt-2">
-                  Te damos la opción de que puedas informarnos la lectura de tu medidor. Para que sea incluida en la siguiente facturación.
-                </div>
               </div>
               <form action="" class="form-lectura">
-                  <div class="form-group">
-                    <select class="form-control form-control-lg">
-                      <option>Fecha de lectura</option>
-                      <option>02/05/2021</option>
-                      <option>02/05/2021</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" placeholder="Apellidos">
+                  <div class="box-dato-lectura">
+                    <img class="img-fluid" src="images/grafica-lectura.jpg" alt="">
                   </div>
                   <div class="box-input-upload">
                     <div class="custom-file">
