add page mapa-reporte-2

--- a/app/mapa-reporte-2.html
+++ b/app/mapa-reporte-2.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Mapa reporte 1</title>
+  <title>Mapa reporte 2</title>
 </head>
 
-<body class="page page-reporte-1">
+<body class="page page-reporte-2">
   <div class="wrapper">
     <div class="header">
       <div class="container-header">
@@ -453,52 +453,21 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">1</div>
-                <div class="title-small text-blue-dark">Ingresa tu dirección</div>
+                <div class="title-small text-blue-dark">Selecciona el tipo de reporte</div>
               </div>
 
-              <form action="" class="form-reporte">
-                <div class="form-group form-group-small">
-                  <select class="form-control form-control-lg">
-                    <option>Comuna</option>
-                    <option>comuna 1 </option>
-                    <option>comuna 2 </option>
-                  </select>
-                </div>
+            <div class="box-seleccion">
+              <input type="text" class="input-mediun" placeholder="Tapas - Sumideros">
+              <input type="text" class="input-small" placeholder="Gases u olores">
+              <input type="text" class="input-large" placeholder="Agua corriendo en la calle">
+              <input type="text" class="input-small" placeholder="Hurto de agua">
+              <input type="text" class="input-small" placeholder="Apertura de grifos">
+              <input type="text" class="input-small active" placeholder="Mostrar más">
+            </div>
 
-                <div class="form-row">
-                  <div class="form-group form-group-small forn-icon col-8">
-                    <input type="email" class="form-control  form-control-lg" placeholder="Dirección" >
-                    <img src="images/icon-map-input.svg" alt="">
-                  </div>
-                  <div class="form-group form-group-small col-4">
-                    <input type="password" class="form-control form-control-lg" placeholder="Dpto/Casa" >
-                  </div>
-                </div>
-              </form>
-
-              <div class="box-ubicacion">
-                <div class="row-title">
-                  <div class="title-small text-blue-dark mr-5 pr-5">
-                    Utilizar mi ubicación para reportar
-                  </div>
-                </div>
-                <div class="item-switch">
-                  <div class="box-switch inline-switch">
-                    <label class="custom-control-label text-gray pr-3" for="consumoSwitches">
-                      Selecciona esta opción y reportaremos en base 
-                      a tu ubicación de tu GPS
-                    </label>
-                    <label class="switch custom-switch">
-                      <input type="checkbox" id="consumoSwitches">
-                      <span class="slider round"></span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              
-              <div class="box-button px-5 mt-4">
-                <a href="" class="btn btn-lg btn-block btn-blanco">Siguiente</a>
-              </div>
+            <div class="box-button px-5 mt-4">
+              <a href="" class="btn btn-lg btn-block btn-blanco">Siguiente</a>
+            </div>
 
             </div>
           
