update class active input form

--- a/app/mapa-reporte-2.html
+++ b/app/mapa-reporte-2.html
@@ -452,7 +452,7 @@
           
             <div class="content-reporta">
               <div class="title-number">
-                <div class="circle-title mr-2">1</div>
+                <div class="circle-title mr-2">2</div>
                 <div class="title-small text-blue-dark">Selecciona el tipo de reporte</div>
               </div>
 
@@ -461,7 +461,7 @@
               <input type="text" class="input-small" placeholder="Gases u olores">
               <input type="text" class="input-large" placeholder="Agua corriendo en la calle">
               <input type="text" class="input-small" placeholder="Hurto de agua">
-              <input type="text" class="input-small" placeholder="Apertura de grifos">
+              <input type="text" class="input-mediun" placeholder="Apertura de grifos">
               <input type="text" class="input-small active" placeholder="Mostrar más">
             </div>
 
