add page mapa reporte 3

--- a/app/comprobante-exito.html
+++ b/app/comprobante-exito.html
@@ -486,7 +486,7 @@
 
         <div class="box-recibir-boleta mt-4">
           <div class="main-title ">Recibir boleta digital</div>
-          <div class="lista-boleta">
+          <div class="lista-switch">
   
             <div class="item-switch">
               <div class="box-switch inline-switch">
