refactoring size input form

--- a/app/comprobante-exito.html
+++ b/app/comprobante-exito.html
@@ -538,7 +538,7 @@
           <form action="">
             <div class="form-group">
                 <div class="input-group input-group-info">
-                  <input type="email" class="form-control input-busqueda" placeholder="Correo" data-toggle="modal" data-target="#exampleModal">
+                  <input type="email" class="form-control form-control-lg input-busqueda" placeholder="Correo" data-toggle="modal" data-target="#exampleModal">
                   <div class="input-group-prepend">
                     <div class="input-group-text">
                       <img src="images/arrow-right-white.svg" alt="">
@@ -546,7 +546,7 @@
                   </div>
                 </div>
                 <div class="input-group input-group-info">
-                  <input type="text" class="form-control input-busqueda" placeholder="Celular" data-toggle="modal" data-target="#exampleModal">
+                  <input type="text" class="form-control form-control-lg input-busqueda" placeholder="Celular" data-toggle="modal" data-target="#exampleModal">
                   <div class="input-group-prepend">
                     <div class="input-group-text">
                       <img src="images/arrow-right-white.svg" alt="">
