--- a/app/lectura-medidor-5.html
+++ b/app/lectura-medidor-5.html
@@ -479,7 +479,7 @@
 
           <form action="">
               <div class="input-group input-group-info">
-                <input type="email" class="form-control input-busqueda" placeholder="Escribe tu correo electrónico" data-toggle="modal" data-target="#exampleModal">
+                <input type="email" class="form-control form-control-lg input-busqueda" placeholder="Escribe tu correo electrónico" data-toggle="modal" data-target="#exampleModal">
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img src="images/arrow-right-white.svg" alt="">
