--- a/app/pago-2-movil.html
+++ b/app/pago-2-movil.html
@@ -416,7 +416,7 @@
                 <p class="text-sm">Simula un convenio y no veas tu servicio interrumido </p>
                
                 <div class="input-group input-group-pago">
-                  <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#exampleModal">
+                  <input type="text" class="form-control form-control-lg input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#exampleModal">
                   <div class="input-group-prepend">
                     <div class="input-group-text">
                       <img src="images/arrow-right-white.svg" alt="">
