--- a/app/mapa-reporte-4.html
+++ b/app/mapa-reporte-4.html
@@ -479,7 +479,7 @@
                         <input type="file" id="customFile" class="custom-file-input" style="z-index: -5;">
                         <img src="images/icon-camara.svg" alt=""  style="z-index: 10;">
                         <label class="custom-file-label icon-galeria" for="customFile" data-browse="Browse"> 
-                           <span>Cámara</span> 
+                           <span>Galeria</span> 
                         </label>
                       </div>
                     </div>
