--- a/app/mapa-reporte-4.html
+++ b/app/mapa-reporte-4.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Mapa reporte 2</title>
+  <title>Mapa reporte 4</title>
 </head>
 
 <body class="page page-reporte-2">
@@ -468,7 +468,7 @@
                         <input type="file" id="customFile" class="custom-file-input" style="z-index: -5;">
                         <img src="images/icon-galeria.svg" alt=""  style="z-index: 10;">
                         <label class="custom-file-label icon-galeria" for="customFile" data-browse="Browse"> 
-                           <span>Cámara</span> 
+                           <span>Galeria</span> 
                         </label>
                       </div>
                     </div>
@@ -479,7 +479,7 @@
                         <input type="file" id="customFile" class="custom-file-input" style="z-index: -5;">
                         <img src="images/icon-camara.svg" alt=""  style="z-index: 10;">
                         <label class="custom-file-label icon-galeria" for="customFile" data-browse="Browse"> 
-                           <span>Galeria</span> 
+                           <span>Camara</span> 
                         </label>
                       </div>
                     </div>
