update filtro template

--- a/app/mapa-reporte-2.html
+++ b/app/mapa-reporte-2.html
@@ -455,7 +455,7 @@
                 <div class="title-small text-blue-dark">Selecciona el tipo de reporte</div>
               </div>
 
-              <div class="box-seleccion">
+              <div class="box-seleccion tipo-reporte">
                 <input type="text" class="input-mediun" placeholder="Tapas - Sumideros">
                 <input type="text" class="input-small" placeholder="Gases u olores">
                 <input type="text" class="input-large" placeholder="Agua corriendo en la calle">
