--- a/app/mapa-reporte.html
+++ b/app/mapa-reporte.html
@@ -352,11 +352,17 @@
             <img src="images/arrow-left.svg" alt="">
           </a>
           <div class="second-title">Ver en el mapa</div>
-          <div class="box-filtro">
+          <!-- <div class="box-filtro">
             <input type="text" class="form-control-small input-trabajos" placeholder="Trabajos">
             <input type="text" class="form-control-small input-grifos" placeholder="Grifos">
             <input type="text" class="form-control-small input-sucursales" placeholder="Sucursales y Agen...">
             <input type="text" class="form-control-small input-hidrata active" placeholder="P. de hidratación">
+          </div> -->
+          <div class="box-seleccion  mt-4">
+            <input type="text" class="form-control-small input-mediun active" placeholder="Trabajos">
+            <input type="text" class="form-control-small input-small" placeholder="Grifos">
+            <input type="text" class="form-control-small input-large" placeholder="Sucursales y Agen...">
+            <input type="text" class="form-control-small input-mediun " placeholder="P. de hidratación">
           </div>
           <div class="box-lista-filtro">
             <div class="item-lista active">
