update page requerimiento

--- a/app/requerimiento-caso1.html
+++ b/app/requerimiento-caso1.html
@@ -543,7 +543,7 @@
                     </div>
 
                     <div class="row-ingreso">
-                      <div class="circle-blue  mr-2">2</div>
+                      <div class="circle-title mr-2">2</div>
                       <div class="info-ingreso">
                         <div class="title-ingreso">
                           Resolviendo el problema
@@ -579,118 +579,7 @@
                     <a href="" class="btn btn-block btn-gray-light">Modificar</a>
 
                     <div class="row-ingreso mt-4">
-                      <div class="circle-title mr-2">3</div>
-                      <div class="info-ingreso">
-                        <div class="title-ingreso">
-                          Lo que hemos hecho
-                        </div>
-                        <p>En la atención de tu requerimiento se han realizado una serie de acciones, 
-                          las que detallamos a continuación:</p>
-                      </div>
-                    </div>
-
-                    <div class="text-green text-sm"><strong> 09/04/2020 </strong></div>
-                    <p class="text-sm"> Se debe proceder a realizar a la solicitud de reparación de alcantarillado</p>
-                    <a href="" class="btn btn-block btn-azul-dark">Reabrir mi solicitud </a>
-                    
-
-                  </div>
-                </div>
-                <div class="box-requerimiento">
-                  <div class="item-requerimiento row">
-                    <div class="col-6">N° de Reporte</div>
-                    <div class="col-6">1122345</div>
-                  </div>
-                  <div class="item-requerimiento row">
-                    <div class="col-6">Fecha de reporte</div>
-                    <div class="col-6">18/06/2021</div>
-                  </div>
-                  <div class="item-requerimiento row">
-                    <div class="col-6">Tipo de reporte</div>
-                    <div class="col-6">Privado</div>
-                  </div>
-                  <div class="item-requerimiento row">
-                    <div class="col-6">Clasificación</div>
-                    <div class="col-6">Solicitud Reparación Alcantarilaldo</div>
-                  </div>
-                  <div class="item-requerimiento row">
-                    <div class="col-6">Estado</div>
-                    <div class="col-6"><span class="badge-pagada">Resuelto</span></div>
-                  </div>
-                  <div class="item-ver-detalle">
-                    <a href="" class="link link-ver-detalle text-sm"> Ver detalles
-                      <img class="ml-1" src="images/icon-mas.svg" alt="">
-                    </a>
-                  </div>
-                  <div class="mostrar-resultado-detalle border-top">
-                    <div class="row-ingreso">
-                      <div class="circle-title mr-2">1</div>
-                      <div class="info-ingreso">
-                        <div class="title-ingreso">
-                          Ingreso de solicitud 
-                        </div>
-                        <p>Tu reporte fue ingresado exitosamente</p>
-                      </div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Nº de solicitud:</div>
-                      <div class="col-6">1-4675300328</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Fecha de ingreso:</div>
-                      <div class="col-6">09/04/2021 15:40</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Canal de ingreso: </div>
-                      <div class="col-6"> Oficina Virtual</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Tiempo estimado </div>
-                      <div class="col-6"> Tendremos hasta el 05/04/2021 para responder tu solicitud</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Descripción </div>
-                      <div class="col-6"> Necesito una reparación en el alcantarillado que colinda en mi hogar ya que no puedo ocupar el servicio.</div>
-                    </div>
-
-                    <div class="row-ingreso">
-                      <div class="circle-blue  mr-2">2</div>
-                      <div class="info-ingreso">
-                        <div class="title-ingreso">
-                          Resolviendo el problema
-                        </div>
-                        <p>Estamos trabajando en tu solicitud</p>
-                      </div>
-                    </div>
-                    <div class="text-green text-sm"> <strong> 09/04/2020 </strong> </div>
-                    <p class="text-sm"> Se debe proceder a realizar a la solicitud de reparación de alcantarillado</p>
-
-                    <div class="item-detalle row">
-                      <div class="col-6">Dirección:</div>
-                      <div class="col-6">Estrella Solitaria 5626</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">Técnico Asignado</div>
-                      <div class="col-6">Pedro Morales Contreras</div>
-                    </div>
-                    <div class="item-detalle row">
-                      <div class="col-6">
-                        Agendamiento
-                        <span class="fecha-ageda">
-                          22/06/2021
-                        </span>
-                      </div>
-                      <div class="col-6">
-                        <br>
-                        <span class="fecha-ageda">
-                          AM 9:00 12:00
-                        </span>
-                      </div>
-                    </div>
-                    <a href="" class="btn btn-block btn-gray-light">Modificar</a>
-
-                    <div class="row-ingreso mt-4">
-                      <div class="circle-title mr-2">3</div>
+                      <div class="circle-green mr-2">3</div>
                       <div class="info-ingreso">
                         <div class="title-ingreso">
                           Lo que hemos hecho
