refactoring scss module

--- a/app/comprobante-exito.html
+++ b/app/comprobante-exito.html
@@ -530,7 +530,7 @@
           </div>
         </div>
 
-        <div class="box-update-personal">
+        <div class="box-newsletter">
           <div class="title-small text-blue-dark  mb-2">
             ¿Está actualizada tu información personal?
           </div>
