--- a/app/lectura-medidor-5.html
+++ b/app/lectura-medidor-5.html
@@ -464,7 +464,7 @@
           </div>
         </div>
 
-        <div class="box-update-personal border-bottom">
+        <div class="box-newsletter border-bottom">
           <div class="d-flex title-small text-blue-dark  mb-2">
             ¿Deseas suscribirte a nuestro boletín informativo?
             <div class="item-switch pt-2">
