--- a/app/mapa-reporte-4.html
+++ b/app/mapa-reporte-4.html
@@ -487,7 +487,7 @@
                 </div>
 
 
-                <div class="box-update-personal ">
+                <div class="box-newsletter">
                   <div class="d-flex title-small text-blue-dark  mb-2">
                     ¿Deseas enviar una copia a otro correo electronico ?
                   </div>
