clear code, remove comments and img

--- a/app/comprobante-exito.html
+++ b/app/comprobante-exito.html
@@ -531,7 +531,7 @@
         </div>
 
         <div class="box-newsletter">
-          <div class="title-small text-blue-dark  mb-2">
+          <div class="main-title text-blue-dark  mb-2">
             ¿Está actualizada tu información personal?
           </div>
           <p class="text-sm text-gray">Revisa tus datos </p>
