--- a/app/lectura-medidor-2.html
+++ b/app/lectura-medidor-2.html
@@ -424,12 +424,12 @@
       </div>
     </div>
     <main class="main"> 
-      <!-- contenido --> 
+     
       <section class="section-medidor">
 
         <div class="row-title-medidor ">
           <div class="box-dato-personal">
-            <span class="title-small"> JULIO ESTEBAN BRITO ROJAS </span>
+            <span class="main-title"> JULIO ESTEBAN BRITO ROJAS </span>
             <span class="second-title"> ESTRELLA SOLITARIA 5626 - 701 - ÑUÑOA </span> 
           </div>
           <img src="images/icon-personal.svg" alt="">
@@ -438,7 +438,7 @@
         <div class="content-medidor">
           <div class="box-medidor">
             <div class="circle-number">1</div>
-            <div class="title-small">Selecciona el metodo como quieres relizar tu búsqueda</div>
+            <div class="main-title">Selecciona el metodo como quieres relizar tu búsqueda</div>
           </div>
   
           <div class="box-input-cuenta">
@@ -461,7 +461,6 @@
 
       </section>
      
-      <!-- fin contenido --> 
       <section class="section-menu">
         <a href="" class="item-menu">
           <i>
