--- a/app/lectura-medidor-5.html
+++ b/app/lectura-medidor-5.html
@@ -465,7 +465,7 @@
         </div>
 
         <div class="box-newsletter border-bottom">
-          <div class="d-flex title-small text-blue-dark  mb-2">
+          <div class="d-flex main-title text-blue-dark  mb-2">
             ¿Deseas suscribirte a nuestro boletín informativo?
             <div class="item-switch pt-2">
               <div class="box-switch inline-switch">
