--- a/app/mapa-reporte-1.html
+++ b/app/mapa-reporte-1.html
@@ -453,7 +453,7 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">1</div>
-                <div class="title-small text-blue-dark">Ingresa tu dirección</div>
+                <div class="main-title text-blue-dark">Ingresa tu dirección</div>
               </div>
 
               <form action="" class="form-reporte">
@@ -478,7 +478,7 @@
 
               <div class="box-ubicacion">
                 <div class="row-title">
-                  <div class="title-small text-blue-dark mr-5 pr-5">
+                  <div class="main-title text-blue-dark mr-5 pr-5">
                     Utilizar mi ubicación para reportar
                   </div>
                 </div>
