--- a/app/mapa-reporte-2.html
+++ b/app/mapa-reporte-2.html
@@ -452,7 +452,7 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">2</div>
-                <div class="title-small text-blue-dark">Selecciona el tipo de reporte</div>
+                <div class="main-title text-blue-dark">Selecciona el tipo de reporte</div>
               </div>
 
               <div class="box-seleccion tipo-reporte">
