--- a/app/mapa-reporte-3.html
+++ b/app/mapa-reporte-3.html
@@ -452,7 +452,7 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">3</div>
-                <div class="title-small text-blue-dark">Ayudamos a cuidar los grifos, selecciona al estado del grifo</div>
+                <div class="main-title text-blue-dark">Ayudamos a cuidar los grifos, selecciona al estado del grifo</div>
               </div>
 
               <div class="lista-switch">
