--- a/app/mapa-reporte-4.html
+++ b/app/mapa-reporte-4.html
@@ -452,7 +452,7 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">4</div>
-                <div class="title-small text-blue-dark">Descripción del problema</div>
+                <div class="main-title text-blue-dark">Descripción del problema</div>
              
               </div>
 
@@ -488,7 +488,7 @@
 
 
                 <div class="box-newsletter">
-                  <div class="d-flex title-small text-blue-dark  mb-2">
+                  <div class="d-flex main-title text-blue-dark  mb-2">
                     ¿Deseas enviar una copia a otro correo electronico ?
                   </div>
         
