--- a/app/mapa-reporte-5.html
+++ b/app/mapa-reporte-5.html
@@ -452,7 +452,7 @@
             <div class="content-reporta">
               <div class="title-number">
                 <div class="circle-title mr-2">4</div>
-                <div class="title-small text-green">Reporte realizado con éxito 
+                <div class="main-title text-green">Reporte realizado con éxito 
                   <img class="ml-2" src="images/icon-check-verde-2.svg" alt="">
                 </div>
              
