--- a/app/pago-1-movil.html
+++ b/app/pago-1-movil.html
@@ -378,7 +378,7 @@
               </div>
               <div class="box-recomendado">
                 <div class="row-title">
-                  <div class="title-small text-blue-dark">
+                  <div class="main-title text-blue-dark">
                     ¿Activar el pago automático para esta tarjeta ?
                   </div>
                   <div class="badge-recomendado text-xs">
@@ -400,7 +400,7 @@
 
               <div class="box-convenios text-blue">
                 <div class="row-title mb-1">
-                  <h6 class="title-small pr-3">Descubre los Convenios Aguas Andinas tiene para tí</h6>
+                  <h6 class="main-title pr-3">Descubre los Convenios Aguas Andinas tiene para tí</h6>
                   <img src="images/icon-chancho.svg" alt="">
                 </div>
                 <p class="text-sm">Simula un convenio y no veas tu servicio interrumido </p>
