--- a/app/recuperar-contrasena-2.html
+++ b/app/recuperar-contrasena-2.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="content-correo">
                   <div class="box-top-correo">
-                    <h4 class="title-nombre"><span>Hola, </span> Julio Esteban Brito</h4>
+                    <h4 class="main-title"><span>Hola, </span> Julio Esteban Brito</h4>
                     <p>Enviamos un correo electrónico de restablecimiento 
                       de contraseña a <span>sof********@gmail.com</span></p>
                   </div>
