--- a/app/recuperar-contrasena-3.html
+++ b/app/recuperar-contrasena-3.html
@@ -165,7 +165,7 @@
               <div class="content-page-clave-correo">
                 <div class="content-correo">
                   <div class="box-top-restablecer"> 
-                    <h4 class="title-nombre"><span>Hola, </span> Julio Esteban Brito</h4>
+                    <h4 class="text-base text-blue-dark"><strong>Hola, </strong> Julio Esteban Brito</h4>
                     <p>Recibimos tu solicitud de cambio de contraseña, 
                       por favor ingresa una nueva contraseña</p>
                   </div>
@@ -190,7 +190,6 @@
                     </div>
 
                     <p class="font-italic">La contraseña debe tener un largo mínimo de 8 caracteres y contener al menos una letra mayuscula y un número</p>
-                    <!-- <button class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</button> -->
                     <a href="recuperar-contrasena-5.html" class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</a>
                     <div class="mt-4">
                       <a href="login.html" class="link-bold">Volver</a>
