--- a/app/mapa-grifo-exito.html
+++ b/app/mapa-grifo-exito.html
@@ -456,7 +456,7 @@
         <div class="container">
           
             <div class="content-reporta">
-              <div class="title-small text-blue-dark">Selecciona el tipo de problema que presentas</div>
+              <div class="main-title text-blue-dark">Selecciona el tipo de problema que presentas</div>
 
               <form action="" class="form-reporte">
                 <div class="form-group form-group-small">
@@ -480,7 +480,7 @@
 
               <div class="box-ubicacion border-bottom pb-4">
                 <div class="row-title">
-                  <div class="title-small text-blue-dark mr-5 pr-5">
+                  <div class="main-title text-blue-dark mr-5 pr-5">
                     Utilizar mi ubicación para reportar
                   </div>
                 </div>
