--- a/app/registro-mobile-natural.html
+++ b/app/registro-mobile-natural.html
@@ -231,7 +231,7 @@
                                 
                             </div>
                           </div>
-                          <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#exampleModal">
+                          <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#busquedaModal">
                         </div>
                       </div>
                       
@@ -275,7 +275,7 @@
       </section>
     </main>
   </div>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="busquedaModal" tabindex="-1" role="dialog" aria-labelledby="busquedaModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
