--- a/app/centro-ayuda.html
+++ b/app/centro-ayuda.html
@@ -487,7 +487,7 @@
                               </a>
                               <a href="" class="btn btn-util">
                                 <img src="images/icon-no.svg" alt="">
-                                <span>Si</span>
+                                <span>No</span>
                               </a>
                             </div>
                           </div>
